<resources>
    <string name="app_name">OReader</string>
    <string name="appid">11</string>
    <string name="author_id">475</string>
    <string name="author_huanxin_id">82418</string>
    <string name="menu_test">个人中心</string>
    <string name="go_back">返回</string>
    <string name="load">加载数据中....</string>
    <string name="title_mine">我的</string>
    <string name="mine_item_favorite">我的收藏</string>
    <string name="mine_item_feedback">即时沟通</string>
    <string name="mine_item_clearcache">清除缓存</string>
    <string name="mine_item_about">关于我们</string>
    <string name="mine_item_appstore">应用推荐</string>
    <string name="favorite">收藏</string>
    <string name="comment_write">写评论</string>
    <string name="comment_look">看评论</string>
    <string name="favorite_text">收藏</string>
    <string name="share_text">分享</string>
    <string name="generic_server_down">网络超时，请检查网络设置</string>
    <string name="no_internet">网络不可用，请检查网络设置</string>
    <string name="generic_error">未知错误</string>
    <string name="no_fav">暂无收藏</string>
    <string name="publish">发布</string>
    <string name="chat_button_pushtotalk">按住说话</string>
    <string name="chat_button_send">发送</string>
    <string name="chat_attach_take_pic">拍照</string>
    <string name="chat_attach_picture">图片</string>
    <string name="chat_attach_location">位置</string>
    <string name="chat_attach_file">文件</string>
    <string name="chat_move_up_to_cancel">手指上滑，取消发送</string>
    <string name="chat_release_to_cancel">松开手指，取消发送</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="voice">[语音]</string>
    <string name="video">[视频]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="file">[文件]</string>
    <string name="chat_recoding_fail">消息发送失败</string>
    <string name="chat_text_ack_msg">已读</string>
    <string name="chat_text_delivered_msg">送达</string>
    <string name="chat_send_fail">发送失败</string>
    <string name="chat_connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="mine_item_lookmsg">查看消息</string>
    <string name="chat_prompt">提示</string>
    <string name="chat_ok">确定</string>
    <string name="chat_cancel">取消</string>
    <string name="chat_no_msg">暂无聊天记录</string>
</resources>
