<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/bottom_bar_height"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <View
        android:id="@+id/toolbar_divider"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/detail_divider_day" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:paddingLeft="6.0dip"
        android:paddingRight="6.0dip"
        android:layout_marginTop="5.0dp">

        <TextView
            android:id="@+id/commentWriteAction"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/inner_bottom_bar_height"
            android:text="@string/comment_write"
            android:layout_weight="1"
            android:drawableTop="@drawable/write_comment"
            style="@style/tool_item_text" />
        <TextView
            android:id="@+id/commentLookAction"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/inner_bottom_bar_height"
            android:text="@string/comment_look"
            android:drawableTop="@drawable/look_comment"
            android:layout_weight="1"
            style="@style/tool_item_text" />

        <TextView
            android:id="@+id/favorAction"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/inner_bottom_bar_height"
            android:text="@string/favorite_text"
            android:layout_weight="1"
            style="@style/tool_item_text" />
        <TextView
            android:id="@+id/shareAction"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/inner_bottom_bar_height"
            android:text="@string/share_text"
            android:drawableTop="@drawable/share"
            android:layout_weight="1"
            android:textAlignment="center"
            style="@style/tool_item_text" />
    </LinearLayout>
</LinearLayout>
