<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/slidingMenu"
    android:background="@color/slid_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
    android:id="@+id/title_bar"
    style="@style/title_bar_style"
    android:background="@color/slid_bg">
        <TextView
            android:id="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:layout_centerInParent="true"
            style="@style/title_text_style" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:layout_gravity="center|center_horizontal|center_vertical">
            <RelativeLayout
                android:id="@+id/userinfo"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:gravity="center">
                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/avatar"
                    android:layout_height="80dp"
                    android:layout_width="80dp"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:layout_gravity="center|center_horizontal|center_vertical" />
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/avatar"
                    android:textSize="20dp"
                    android:text="yang"
                    android:textColor="@color/login"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/reg_login"
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_btn"
                    android:drawableTop="@drawable/default_avatar"
                    android:layout_gravity="center|center_vertical|center_horizontal"
                    android:gravity="center"
                    android:drawablePadding="10dp"
                    android:textSize="16.0sp"
                    android:text="请登录"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/favorite_btn"
                style="@style/mine_item">
                <TextView
                    android:id="@+id/favor_text"
                    android:text="@string/mine_item_favorite"
                    android:drawableLeft="@drawable/slid_fav"
                    style="@style/mine_item_text" />
                <ImageView
                    android:id="@+id/favor_arrow"
                    style="@style/mine_arrow" />
                <ImageView style="@style/mine_btn_line" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/clear_cacahe_btn"
                style="@style/mine_item">
                <TextView
                    android:id="@+id/clear_cacahe"
                    android:text="@string/mine_item_clearcache"
                    android:drawableLeft="@drawable/clear_cache"
                    style="@style/mine_item_text" />
                <ImageView style="@style/mine_btn_line" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/about_btn"
                style="@style/mine_item">
                <TextView
                    android:id="@+id/about_text"
                    android:text="@string/mine_item_about"
                    android:drawableLeft="@drawable/slid_about"
                    style="@style/mine_item_text" />
                <ImageView
                    android:id="@+id/about_arrow"
                    style="@style/mine_arrow" />
                <ImageView style="@style/mine_btn_line" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/feedback_btn"
                style="@style/mine_item"
                android:visibility="gone">

                <TextView
                    android:id="@+id/feedback_text"
                    android:text="@string/mine_item_feedback"
                    android:drawableLeft="@drawable/slid_feedback"
                    style="@style/mine_item_text" />
                <ImageView
                    style="@style/mine_arrow" />
                <ImageView style="@style/mine_btn_line" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/msg_btn"
                style="@style/mine_item"
                android:visibility="gone">
                <TextView
                    android:id="@+id/look_msg_text"
                    android:text="@string/mine_item_lookmsg"
                    android:drawableLeft="@drawable/slid_feedback"
                    style="@style/mine_item_text" />
                <ImageView
                    style="@style/mine_arrow" />
                <ImageView style="@style/mine_btn_line" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/logout"
                style="@style/mine_item"
                android:visibility="visible">
                <TextView
                    android:text="安全退出"
                    android:drawableLeft="@drawable/slid_logout"
                    style="@style/mine_item_text" />
                <ImageView
                    style="@style/mine_arrow" />
                <ImageView style="@style/mine_btn_line" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/processBar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center|center_vertical"/>
        </FrameLayout>
</RelativeLayout>
