<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f0eb" >

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/chat_height_top_bar"
        android:background="@color/chat_top_bar_normal_bg"
        android:gravity="center_vertical" >
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="9dp"
            android:scaleType="centerInside"
            android:src="@drawable/chat_mm_title_back" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/container_remove"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/chat_common_tab_bg" >

            <ImageView
                android:id="@+id/delete_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="9dp"
                android:scaleType="centerInside"
                android:src="@drawable/chat_mm_title_remove" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="2dip"
        android:paddingTop="2dip" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/chat_gray_normal" />

        <LinearLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aaffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="4dp" >

            <Button
                android:id="@+id/btn_set_mode_voice"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/chatting_setmode_voice_btn"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_set_mode_keyboard"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/chatting_setmode_keyboard_btn"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/btn_press_to_speak"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="@drawable/chat_press_speak_btn"
                android:gravity="center"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/chat_button_pushtotalk"
                    android:textColor="#666666"
                    android:textSize="16sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/edittext_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:gravity="bottom">

                <EditText
                    android:id="@+id/et_sendmessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dip"
                    android:background="@null"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    android:minHeight="40dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingTop="3dp"
                    android:textSize="18sp"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@null"/>

                <ImageView
                    android:id="@+id/iv_emoticons_normal"
                    android:layout_width="24dip"
                    android:layout_height="24dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical|right"
                    android:layout_margin="1dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chatting_biaoqing_btn_normal"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/iv_emoticons_checked"
                    android:layout_width="24dip"
                    android:layout_height="24dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical|right"
                    android:layout_margin="1dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chatting_biaoqing_btn_enable"
                    android:visibility="invisible" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_more"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/type_select_btn" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="42dp"
                android:layout_height="32dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/chat_send_btn_selector"
                android:text="@string/chat_button_send"
                android:textColor="#666666"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            android:visibility="gone" >
            <!-- 表情图片 -->
            <LinearLayout
                android:id="@+id/ll_face_container"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:visibility="visible" >
                <android.support.v4.view.ViewPager
                    android:id="@+id/expressionViewpager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <!-- 图片，表情，名片等按钮 -->
            <LinearLayout
                android:id="@+id/ll_btn_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="6dp"
                    android:weightSum="4" >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >
                            <ImageView
                                android:id="@+id/btn_take_picture"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/chat_takepic_selector"
                                android:clickable="true"
                                android:scaleType="fitCenter" />
                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/chat_attach_take_pic"
                            android:textColor="#727171" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >
                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >
                            <ImageView
                                android:id="@+id/btn_picture"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/chat_image_selector"
                                android:clickable="true"
                                android:scaleType="fitCenter" />
                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/chat_attach_picture"
                            android:textColor="#727171" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >
                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/btn_file"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/chat_file_selector"
                                android:clickable="true"
                                android:scaleType="fitCenter" />
                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/chat_attach_file"
                            android:textColor="#727171" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bar_bottom"
        android:layout_below="@id/top_bar" >

        <ProgressBar
            android:id="@+id/pb_load_more"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/pb_load_more"
            android:cacheColorHint="#00000000"
            android:divider="@null"
            android:dividerHeight="5dp"
            android:listSelector="#00000000"
            android:scrollbarStyle="outsideOverlay"
            android:transcriptMode="normal" />

        <RelativeLayout
            android:id="@+id/recording_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/chat_recording_hint_bg"
            android:padding="10dp"
            android:visibility="invisible" >

            <ImageView
                android:id="@+id/mic_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/chat_record_animate_01" />

            <TextView
                android:id="@+id/recording_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mic_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/chat_move_up_to_cancel"
                android:textSize="10sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>